--- a/src/styles/modals/_modal.scss
+++ b/src/styles/modals/_modal.scss
@@ -19,6 +19,8 @@
   &__header {
     box-sizing: border-box;
     height: 60px;
+    position: relative;
+    z-index: 10;
 
     box-shadow: 0 1px 0 0 rgba(black, .1);
 
@@ -68,38 +70,6 @@
 
       min-width: 0;
       margin-top: -6px;
-    }
-  }
-  &__search {
-    position: relative;
-    .material-icons {
-      font-size: 18px;
-      line-height: 24px;
-
-      position: absolute;
-      top: 6px;
-      left: 8px;
-
-      pointer-events: none;
-
-      color: rgba(black, .25);
-    }
-    .input {
-      font-size: 14px;
-      line-height: 32px;
-
-      box-sizing: border-box;
-      width: 100%;
-      margin: 0;
-      padding-left: 30px;
-
-      color: rgba(black, .2);
-      border: 1px solid $cloudy-blue;
-      border-radius: 2px;
-      background-color: white;
-      &:focus {
-        color: $greyish-brown;
-      }
     }
   }
 }
