--- a/src/styles/modals/_index.scss
+++ b/src/styles/modals/_index.scss
@@ -1,7 +1,6 @@
 /*
  * Copyright (C) 2016 Actor LLC. <https://actor.im>
  */
-
 @import 'layout';
 @import 'modal';
 @import 'common/close-button';
@@ -12,7 +11,8 @@
 
 @import 'profile';
 @import 'crop';
-@import "groups";
+@import 'lists';
+@import 'groups';
 @import 'people';
 
 @import 'create-group';
