--- a/src/styles/modals/_confirm.scss
+++ b/src/styles/modals/_confirm.scss
@@ -1,12 +1,13 @@
 .confirm {
   max-width: 360px;
+  margin-top: 100px;
   .modal__header {
     height: auto;
+    padding-top: 24px;
 
     box-shadow: none;
   }
   .modal__footer {
-    padding-top: 0;
     .button {
       min-width: 80px;
       margin-left: 4px;
