feat+refactor(web): organize block user translation strings, move block user modal to wrapper and use new markup in it

--- a/src/styles/modals/_groups.scss
+++ b/src/styles/modals/_groups.scss
@@ -10,7 +10,7 @@
 
         color: rgba(black, .6);
 
-        @include text-elipsis();
+        // @include text-elipsis();
       }
       .join-status {
         font-size: 11px;
