fix(web): fix email input top padding in profile modal, disable fullscreen list vertical scroll

--- a/src/styles/modals/_lists.scss
+++ b/src/styles/modals/_lists.scss
@@ -17,7 +17,8 @@
     flex: 0 0 auto;
   }
   .modal__body {
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
 
     box-sizing: border-box;
     padding: 0 $modal-padding;
